syntax = "proto3";

package com.nhnent.tardis.sample.protocol;

message RegisterNickNameReq{
    string nickName = 1;
}

message RegisterNickNameRes{
    bool isSuccess = 1;
}

message ChatMessageToS
{
    string message = 1;
}
message ChatMessageToC
{
    string message = 1;
}

message SampleData
{
    string message = 1;
}

message SampleReq
{
    string message = 1;
}

message SampleRes
{
    string message = 1;
}

message SampleToS
{
    string message = 1;
}

message SampleToC
{
    string message = 1;
}

message BeforeAuthenticateReq
{
    string message = 1;
}

message BeforeAuthenticateRes
{
    string message = 1;
}

message SetTimer
{
    int32 interval = 1;
    string message = 2;
}

message RemoveTimer
{
}